apps/podinfo/HTTPRoute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  parentRefs:
  - name: podinfo
    namespace: podinfo
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: podinfo
      port: 9898
  hostnames:
  - podinfo.k8sdev.cloud
